--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "gulp",
-    "build": "gulp build"
+    "build": "gulp build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
@@ -13,6 +14,7 @@
     "browser-sync": "^3.0.4",
     "css-loader": "^7.1.2",
     "del": "^7.1.0",
+    "gh-pages": "^6.3.0",
     "gulp": "^5.0.1",
     "gulp-clean-css": "^4.3.0",
     "gulp-file-include": "^2.3.0",
